[project]
name = "skema-pricer"
version = "1.0.0"
description = "Derivatives & fixed-income pricer for SKEMA Business School"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
